welcome.lessons.welcome.bat.bool1.CountTeen.scala.error
countTeen:22: error: type mismatch;
 found   : String
 required: Int
	return x
               ^